<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="10dp"
    android:layout_width="match_parent"
    android:id="@+id/scroll_movie"
    android:layout_height="match_parent"
    tools:context=".detail.MovieDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/backdrop_detail_movie"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:background="@drawable/ic_launcher_background"
            android:contentDescription="@string/backdrop_detail_movie"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/image_detail_movie"
            android:layout_width="130dp"
            android:layout_height="190dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="150dp"
            android:background="@mipmap/ic_launcher"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/image_detail_movie"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/backdrop_detail_movie"
            app:layout_constraintTop_toTopOf="@+id/backdrop_detail_movie"
            app:layout_constraintVertical_bias="0.013"
            />

        <TextView
            android:id="@+id/title_detail_movie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:paddingTop="5dp"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/image_detail_movie"
            app:layout_constraintTop_toBottomOf="@+id/backdrop_detail_movie"
            tools:text="@string/title_detail_movie" />

        <TextView
            android:id="@+id/tgl_detail_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center_vertical"
            android:text="@string/tgl_detail_movie"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/image_detail_movie"
            app:layout_constraintTop_toBottomOf="@+id/title_detail_movie" />


        <TextView
            android:id="@+id/tv_crew_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center_vertical"
            android:text="@string/Featured_Crew_movie"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/image_detail_movie"
            app:layout_constraintTop_toBottomOf="@+id/tgl_detail_movie" />

        <TextView
            android:id="@+id/crew_detail_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center_vertical"
            android:text="@string/crew_detail_movie"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/image_detail_movie"
            app:layout_constraintTop_toBottomOf="@+id/tv_crew_detail" />

        <TextView
            android:id="@+id/position_detail_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center_vertical"
            android:text="@string/position_detail_movie"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/image_detail_movie"
            app:layout_constraintTop_toBottomOf="@+id/crew_detail_movie" />


        <TextView
            android:id="@+id/tv_desc_detail_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_vertical"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_detail_movie"
            android:text="@string/desc_tv_movie" />

        <TextView
            android:id="@+id/detail_description_movie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:padding="3dp"
            android:textSize="15sp"
            android:textStyle="bold"
            app:fontFamily="serif"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_desc_detail_movie"
            tools:text="@string/desc_detail_movie" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>